# kvl

./: .gitignore  CLAUDE.md  Makefile  README.org  build.zig  build.zig.zon
conformance/: README.org  run.py
emacs/: README.md  kvl-flycheck.el  kvl-mode.el  kvl-schema.el  kvl-test.el  kvl.el
examples/: basic-syntax.kvl  merge-operations.kvl
go/: compact.go  go.mod  kvl.go  kvl_test.go  merge.go  node.go  parse.go  serialize.go
javascript/: README.md  design.md  (+2 more)
python/: .gitignore  MANIFEST.in  Makefile  README.md  README.org  pyproject.toml  pytest.ini  setup.py
python/docs/: README.org  api-reference.org  best-practices.org  cookbook.org  foundations.org  getting-started.org  list-markers.org  schema-guide.org  transform-guide.org
python/examples/: arrow_separator.kvl  basic.kvl  colon_separator.kvl  complex.kvl  flexible.schema.kvl  formatting.kvl  indentation.kvl  list-markers.kvl  list.kvl  list2.kvl  multichar_separator.kvl  section-test.kvl  separator_examples.kvl  states.kvl
python/kvl/: __init__.py  __main__.py  cli.py  config.py  errors.py  parser.py  query.py  query_hybrid.py  schema.py  serializer.py  transform.py  utils.py
python/tests/: __init__.py  test_api.py  test_cli_schema.py  test_parser.py  test_query.py  test_query_hybrid.py  test_schema.py  test_select.py  test_select_string_literals.py  test_serializer.py
rust/: Cargo.toml  README.md
rust/src/: config.rs  de.rs  error.rs  lib.rs  main.rs  parser.rs  ser.rs  serializer.rs  transform.rs  util.rs  value.rs
rust/tests/: parser.rs  serde.rs  serializer.rs  transform.rs
(+162 files in other folders)
